--- a/index.html
+++ b/index.html
@@ -1,2 +1,68 @@
 # JtSwan19github.io
 Project WebOne
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>webOne</title>
+        <link href = "style.css" rel = "stylesheet">
+    </head>
+    <body>
+        <h1><center>Swany Island Package</center></h1>
+<h2>Bundles</h2>
+<table>
+    <thead>
+        <tr>
+        <th>Bundle</th>
+        <th>Price</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Basic Bundle</td>
+            <td>| $1000</td>
+        </tr>
+        <tr>
+            <td>Expanded Bundle</td>
+            <td>| $5000</td>
+        </tr>
+        <tr>
+            <td>Ultimate Swany Bundle</td>
+            <td>| $10000</td>
+        </tr>
+    </tbody>
+</table>
+<h2>Basic Bundle</h2>
+
+<p>In this bundle, you get the basic necesities for living on your very new island. When you arrive at the airport, you will be able to choose which island to colonize
+with a choice of four islands. When you arrive you will be given a phone. which will contain most of what you need. On the phone, there is a recipe app, which will help you
+make various recipes, an outfit picker, and more! You will also get a tent, where you can place wherever you desire. Don't forget that with this bundle, you will have three
+other inhabitants on your island.</p>
+
+<h2>Expanded Bundle</h2>
+
+<p>With this bundle, you get everything in the previous bundle, plus even more! First, you immediately get the Miles Pass, which lets you visit other islnds and get rewards
+    for your island. On these islands, you can bring some villagers to your own island and choose which ones you want. Lastly, you get a store on your island where you get
+    products to help you on your adventures.
+</p>
+
+<h2>Utimate Swany Bundle</h2>
+
+<p>This bundle has everything in the other two bundles and more. First you get a variety of shops like bakeries, clothing stores, and more. Also, you can customize your clothes
+    and hair with a personal stylist. You start on the island with a million of your island's currency as well. Lastly, with the sea port. you can explore the ocean and collect
+    fish and other sea creatures.</p>
+
+<h2>Reviews</h2>
+
+<ul>
+    <li>"This is the most slay island package I've seen!"(Cherry)</li>
+    <li>"SUCH A WIN PACKAGE!!!"(Biskit)</li>
+    <li>"This package has changed my life for the better."(Dunpy)</li>
+</ul>
+
+<center><img src="https://images.unsplash.com/photo-1559128010-7c1ad6e1b6a5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aXNsYW5kfGVufDB8fDB8fHww&w=1000&q=80" alt= "Island Picture" width = "1000px"></center>
+
+
+
+    </body>
+</html>
