--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Project WebOne
         <link href = "style.css" rel = "stylesheet">
     </head>
     <body>
-        <h1><center>Swany Island Package</center></h1>
+        <div class = "white-back"><h1><center>Swany Island Travel Package</center></h1>
 <h2>Bundles</h2>
 <table>
     <thead>
@@ -34,22 +34,22 @@ Project WebOne
 </table>
 <h2>Basic Bundle</h2>
 
-<p>In this bundle, you get the basic necesities for living on your very new island. When you arrive at the airport, you will be able to choose which island to colonize
-with a choice of four islands. When you arrive you will be given a phone. which will contain most of what you need. On the phone, there is a recipe app, which will help you
-make various recipes, an outfit picker, and more! You will also get a tent, where you can place wherever you desire. Don't forget that with this bundle, you will have three
+<p>In this bundle, you get the basic necesities for living on your very new island. When you arrive at the airport, you will be able to <span class = "bold"><b>choose</b></span> which island to colonize
+with a choice of four islands. When you arrive you will be given a <span class = "bold"><b>phone,</b></span>which will contain most of what you need. On the phone, there is a recipe app, which will help you
+make various recipes, an outfit picker, and more! You will also get a <span class = "bold"><b>tent,</b></span> where you can place wherever you desire. Don't forget that with this bundle, you will have <span class = "bold"><b>three</b></span>
 other inhabitants on your island.</p>
 
 <h2>Expanded Bundle</h2>
 
-<p>With this bundle, you get everything in the previous bundle, plus even more! First, you immediately get the Miles Pass, which lets you visit other islnds and get rewards
-    for your island. On these islands, you can bring some villagers to your own island and choose which ones you want. Lastly, you get a store on your island where you get
+<p>With this bundle, you get <span class = "bold"><b>everything</b></span> in the previous bundle, plus <span class = "bold"><b></b>even more!</span></p> First, you immediately get the <span class = "bold"><b>Miles Pass,</b></span> which lets you visit other islnds and get rewards
+    for your island. On these islands, you can bring some <span class = "bold"><b>villagers</b></span> to your own island and choose which ones you want. Lastly, you get a <span class = "bold"><b>store</b></span> on your island where you get
     products to help you on your adventures.
 </p>
 
 <h2>Utimate Swany Bundle</h2>
 
-<p>This bundle has everything in the other two bundles and more. First you get a variety of shops like bakeries, clothing stores, and more. Also, you can customize your clothes
-    and hair with a personal stylist. You start on the island with a million of your island's currency as well. Lastly, with the sea port. you can explore the ocean and collect
+<p>This bundle has <span class = "bold"><b>everything</b></span> in the other two bundles and <span class = "bold"><b>more.</b></span> First you get a variety of <span class = "bold"><b>shops</b></span> like bakeries, clothing stores, and more. Also, you can <span class = "bold"><b></b>customize your clothes</span></p>
+    and hair with a personal stylist. You start on the island with a <span class = "bold"><b>million</b></span> of your island's currency as well. Lastly, with the <span class = "bold"><b>sea port,</b></span> you can explore the ocean and collect
     fish and other sea creatures.</p>
 
 <h2>Reviews</h2>
@@ -59,10 +59,12 @@ other inhabitants on your island.</p>
     <li>"SUCH A WIN PACKAGE!!!"(Biskit)</li>
     <li>"This package has changed my life for the better."(Dunpy)</li>
 </ul>
+</div>
+<div id = "pic"><img src="https://images.unsplash.com/photo-1559128010-7c1ad6e1b6a5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aXNsYW5kfGVufDB8fDB8fHww&w=1000&q=80" alt= "Island Picture" width = "1290px"></div>
 
-<center><img src="https://images.unsplash.com/photo-1559128010-7c1ad6e1b6a5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aXNsYW5kfGVufDB8fDB8fHww&w=1000&q=80" alt= "Island Picture" width = "1000px"></center>
-
-
+<p><span class= "link"><a href = "https://images.unsplash.com/photo-1559128010-7c1ad6e1b6a5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8aXNsYW5kfGVufDB8fDB8fHww&w=1000&q=80">
+    Image Link</a></span></p>
+    <!--Provides a link to the image on the page-->
 
     </body>
 </html>
